--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <font size="4">Hong Hong (</font>
                                 <font size="4" ; font style="font-family:Microsoft YaHei">洪红</font>
                                 <font size="4">)</font>
-								[<a href="./Files/Hong_CV.pdf" target="_blank">CV</a>]
+								<a href="./Files/Hong_CV.pdf" target="_blank">[CV]</a>
                             </a><br />
 							<br />
 							<br />
